--- a/index.html
+++ b/index.html
@@ -818,9 +818,9 @@ footer{
   z-index: 5;                          /* ⬅️ CLAVE */
 
   transform: scaleY(0);
-  transform-origin: bottom;        /* ⬅️ empieza desde abajo */
+  transform-origin: top;        /* ⬅️ crece hacia abajo */
   animation: cvLineIn 1s cubic-bezier(.22,.61,.36,1) forwards;
-  animation-delay: .25s;
+  animation-delay: .35s;
 
 }
 
