--- a/index.html
+++ b/index.html
@@ -1322,14 +1322,15 @@ function handleFooterVisibility() {
   const scrollBottom = window.innerHeight + window.scrollY;
   const pageHeight = document.documentElement.scrollHeight;
 
-  if (scrollBottom >= pageHeight - 10) {
+  const SHOW_OFFSET = 10;    // aparece casi al final
+  const HIDE_OFFSET = 120;  // ⬅️ desaparece antes al subir
+
+  if (scrollBottom >= pageHeight - SHOW_OFFSET) {
     footer.classList.add('visible');
-  } else {
+  } else if (scrollBottom < pageHeight - HIDE_OFFSET) {
     footer.classList.remove('visible');
   }
 }
-
-window.addEventListener('scroll', handleFooterVisibility);
 
 
   
