--- a/index.html
+++ b/index.html
@@ -1331,6 +1331,8 @@ function handleFooterVisibility() {
     footer.classList.remove('visible');
   }
 }
+window.addEventListener('scroll', handleFooterVisibility);
+handleFooterVisibility();
 
 
   
