--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@ footer.visible{
   transform: scaleY(0);
   transform-origin: top;        /* ⬅️ crece hacia abajo */
   animation: cvLineIn 1.5s cubic-bezier(.22,.61,.36,1) forwards;
-  animation-delay: .5s;
+  animation-delay: 1.2s;
 
 }
 
