--- a/index.html
+++ b/index.html
@@ -839,6 +839,7 @@ footer.visible{
   height: 8px;
   border-radius: 50%;
   background: #fff;
+  background: rgba(255,255,255,0.55); /* ⬅️ más transparente */
   margin-top: 6px;
   justify-self: center;   /* ✅ CENTRO REAL DEL GRID */
 
