--- a/index.html
+++ b/index.html
@@ -1269,8 +1269,14 @@ function resetFooter(){
 /* footer normal */
 function showFooterNormal(){
   resetFooter();
+
+  // fuerza reflow para reiniciar animación
   void footer.offsetHeight;
-  footer.classList.add('visible','animate');
+
+  footer.classList.add('visible');
+
+  // animación SOLO fuera de CV
+  footer.classList.add('animate');
 }
 
 /* footer CV (solo al final del scroll) */
