--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,11 @@ function updateFooter(){
 }
 
 /* eventos */
-window.addEventListener('scroll', updateFooter);
+window.addEventListener('scroll', () => {
+  if (cvSection.classList.contains('active')) {
+    handleFooterCV();
+  }
+});
 
 /* init */
 updateFooter();
