--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Porfolio · Industrial Design</title>
+<title>Portfolio · Industrial Design</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -936,7 +936,7 @@ footer{
   <nav>
     <a class="active" onclick="changeSection('home',this)" data-i18n="nav_home">Inicio</a>
     <a onclick="changeSection('about',this)" data-i18n="nav_about">Sobre mí</a>
-    <a onclick="changeSection('portfolio',this)" data-i18n="nav_portfolio">Porfolio</a>
+    <a onclick="changeSection('portfolio',this)" data-i18n="nav_portfolio">Portfolio</a>
     <a onclick="changeSection('cv',this)" data-i18n="nav_cv">CV</a>
     <a onclick="changeSection('skills',this)" data-i18n="nav_skills">Habilidades</a>
     <a onclick="changeSection('contact',this)" data-i18n="nav_contact">Contacto</a>
